probando Chakra-ui

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-body{
-  background-color: #212529;
-}
+/* body{
+  background-color: hsl(101, 86%, 49%);
+} */
 .App-logo {
   height: 15vmin;
   pointer-events: none;
